--- a/index.html
+++ b/index.html
@@ -1,103 +1,168 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Surpresa Especial ❤️</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
-    body { background: linear-gradient(135deg, #ff9ecb, #ff5ea1); min-height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 20px; color: #330033; }
-    h1, p, label { color: #330033; }
-    input { padding: 10px; border-radius: 8px; border: 1px solid #ff5ea1; width: 80%; max-width: 400px; margin-bottom: 10px; color: #330033; background: #fff0f5; }
-    .btn { margin-top: 20px; padding: 15px 30px; background: #ff5ea1; color: white; font-size: 1.3rem; border-radius: 30px; text-decoration: none; font-weight: bold; box-shadow: 0 0 15px rgba(255,255,255,0.4); animation: pulse 2s infinite; cursor: pointer; border: none; }
-    @keyframes fadeIn { 0% { opacity: 0; transform: translateY(20px); } 100% { opacity: 1; transform: translateY(0); } }
-    @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.05); } 100% { transform: scale(1); } }
-    #carta { display: none; margin-top: 30px; background: #ffe6f2; color: #330033; padding: 25px; border-radius: 15px; max-width: 500px; box-shadow: 0 0 25px rgba(255,255,255,0.5); animation: fadeIn 1s ease; }
-    .hearts { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; overflow: hidden; }
-    .heart { position: absolute; color: rgba(255, 0, 128,0.8); font-size: 20px; animation: floatUp 6s linear infinite; }
-    @keyframes floatUp { 0% { transform: translateY(100vh) scale(0.5); } 100% { transform: translateY(-10vh) scale(1.2); } }
-    .cartaExtra { animation: aparecerSuave 1.5s ease, flutuar 3s ease-in-out infinite; margin-top: 30px; background: #ffe6f2; color: #330033; padding: 25px; border-radius: 15px; max-width: 500px; box-shadow: 0 0 25px rgba(255,255,255,0.5); }
-    @keyframes aparecerSuave { 0% { opacity: 0; transform: scale(0.8) translateY(20px); } 100% { opacity: 1; transform: scale(1) translateY(0); } }
-    @keyframes flutuar { 0% { transform: translateY(0); } 50% { transform: translateY(-8px); } 100% { transform: translateY(0); } }
-  </style>
+<meta charset="UTF-8">
+<title>Surpresa Para Você 💖</title>
+<style>
+  body {
+    background: linear-gradient(180deg, #ffe6f2, #ffb3d9);
+    font-family: 'Arial', sans-serif;
+    text-align: center;
+    color: #333;
+    overflow-x: hidden;
+  }
+
+  h1, h2 {
+    color: #d63384;
+    text-shadow: 0 0 8px rgba(255, 0, 150, 0.3);
+  }
+
+  input, button {
+    padding: 12px;
+    font-size: 18px;
+    border-radius: 10px;
+    border: none;
+    margin: 6px;
+  }
+
+  button {
+    background: #ff4da6;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  button:hover {
+    transform: scale(1.1);
+    background: #ff74bc;
+  }
+
+  .heart {
+    position: fixed;
+    top: -10px;
+    color: #ff4da6;
+    font-size: 20px;
+    animation: fall 4s linear infinite;
+  }
+
+  @keyframes fall {
+    from { transform: translateY(-10px); opacity: 1; }
+    to   { transform: translateY(110vh); opacity: 0; }
+  }
+
+  #slideshow img {
+    width: 300px;
+    display: none;
+    border-radius: 15px;
+    margin-top: 20px;
+    box-shadow: 0px 0px 20px rgba(255, 0, 120, 0.4);
+    animation: fade 1s ease-in-out;
+  }
+  @keyframes fade {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+
+  #mazeCanvas {
+    border: 3px solid #d63384;
+    background: white;
+    margin-top: 20px;
+    display: none;
+  }
+</style>
 </head>
+
 <body>
-  <div id="verificacao" style="text-align:center;">
-    <h1>Confirmação de Identidade 💖</h1>
-    <p>Responda para provar que é você!</p>
-    <div style="margin-top:20px;">
-      <label>Onde a gente se conheceu?</label><br>
-      <input id="q1" placeholder="Digite aqui..."><br>
-      <label>Quando a gente ficou próximo?</label><br>
-      <input id="q2" placeholder="Digite aqui..."><br>
-      <label>Qual é minha idade?</label><br>
-      <input id="q3" placeholder="Digite aqui..."><br>
-      <label>Qual é a sua idade?</label><br>
-      <input id="q4" placeholder="Digite aqui..."><br>
-      <label>Qual é o seu nome?</label><br>
-      <input id="q5" placeholder="Digite aqui..."><br>
-      <button class="btn" onclick="verificarRespostas()">Confirmar 💘</button>
-    </div>
-  </div>
-  <div id="conteudo" style="display:none;">
-    <h1>Oi ❤️</h1>
-    <p>Preparei isso só pra você… porque você merece todas as fofuras do mundo!</p>
-    <a class="btn" onclick="mostrarCarta()">Clique aqui 😍</a>
-    <div id="carta" style="display:none;">
-      <h2>Para você 💌</h2>
-      <p>Em um mês tanta coisa mudou… de um beijinho na testa tímido pra um abraço longo. Eu sei que faz só um mês, mas já amo você. Perto de você me sinto seguro, posso falar tudo mesmo com vergonha. Te gosto como o vento gosta de bagunçar o cabelo. Eu te amo como amo um domingo preguiçoso. Te adoro como abraço apertado adora durar. Meu coração samba… nem é Carnaval, mas ele pula de alegria quando penso em você.</p>
-    </div>
-    <div class="hearts" id="hearts"></div>
-    <div id="extras" style="display:none; margin-top:40px;">
-      <a class="btn" onclick="mostrarCartaExtra('c1')">Carta Especial 💌</a>
-    </div>
-    <div id="c1" class="cartaExtra" style="display:none;">
-      <h2>Carta Especial 💌</h2>
-      <p>Meu coração samba… nem é Carnaval, mas ele pula de alegria quando penso em você. ❤️</p>
-    </div>
-  </div>
-  <script>
-    function verificarRespostas() {
-      const r1 = document.getElementById('q1').value.toLowerCase();
-      const r2 = document.getElementById('q2').value.toLowerCase();
-      const r3 = document.getElementById('q3').value;
-      const r4 = document.getElementById('q4').value;
-      const r5 = document.getElementById('q5').value.toLowerCase();
-      if (r1.includes('ifce de paracuru') && (r2.includes('sebrae') || r2.includes('ônibus') || r2.includes('onibus')) && r3 === '19' && r4 === '23' && (r5.includes('adyla') || r5.includes('adyla da silva moreira'))) {
-        document.getElementById('verificacao').style.display = 'none';
-        document.getElementById('conteudo').style.display = 'block';
-      } else {
-        alert('Respostas erradas 😢 Tenta de novo!');
-      }
+<div id="intro" style="margin-top:40px; animation: fade 1s ease-in-out;">
+  <h1>Tenho uma surpresa pra você, meu amor 💖</h1>
+  <p style="font-size:20px; color:#d63384; margin-top:10px;">Clique no botão abaixo para começar ✨</p>
+  <button onclick="startIntro()" style="margin-top:20px; padding:14px 25px; font-size:20px;">Começar 💕</button>
+</div>
+
+<script>
+function startIntro(){
+  document.getElementById("intro").style.display = "none";
+  document.getElementById("quiz").style.display = "block";
+}
+</script>
+
+<h1>Oi, meu amor 💖</h1>
+
+<div id="quiz" style="display:none;">
+  <h2>Responde aqui, minha princesa 💕</h2>
+
+  <p>1. Onde a gente se conheceu?</p>
+  <input id="q1" placeholder="Digite aqui...">
+
+  <p>2. Quando a gente ficou próximo?</p>
+  <input id="q2" placeholder="Digite aqui...">
+
+  <p>3. Minha idade?</p>
+  <input id="q3" placeholder="Digite aqui...">
+
+  <p>4. Sua idade?</p>
+  <input id="q4" placeholder="Digite aqui...">
+
+  <p>5. Seu nome?</p>
+  <input id="q5" placeholder="Digite aqui...">
+
+  <p>6. Qual meu nome?</p>
+  <input id="q6" placeholder="Digite aqui...">
+
+  <br><br>
+  <button onclick="check()">Confirmar 💞</button>
+</div>
+
+<div id="counter" style="display:none;">
+  <h2>Nosso tempo juntinhos 💘</h2>
+  <h3 id="time"></h3>
+</div>
+
+<canvas id="mazeCanvas" width="300" height="300"></canvas>
+
+<div id="slideshow" style="display:none;">
+  <h2>Nossas fotinhas 💞</h2>
+  <p>As imagens não foram incluídas no ZIP (não foram enviadas).</p>
+</div>
+
+<script>
+const answers = {
+  q1: ["ifce", "ifce de paracuru"],
+  q2: ["evento da sebrae", "no ônibus", "ônibus"],
+  q3: ["19"],
+  q4: ["23"],
+  q5: ["adyla", "adyla moreira", "adyla da silva moreira"],
+  q6: ["eduardo", "eduardo akilles"]
+};
+
+function check(){
+  for(let i=1;i<=6;i++){
+    let v = document.getElementById("q"+i).value.toLowerCase().trim();
+    if(!answers["q"+i].includes(v)){
+      alert("Resposta "+i+" está errada 😢 Tenta de novo, amor");
+      return;
     }
-    function mostrarCarta() {
-      document.getElementById("carta").style.display = "block";
-      soltarCoracoes();
-    }
-    function mostrarCartaExtra(id) {
-      document.querySelectorAll('.cartaExtra').forEach(c => c.style.display = 'none');
-      document.getElementById(id).style.display = 'block';
-      soltarCoracoes();
-    }
-    const originalVerificar = verificarRespostas;
-    verificarRespostas = function() {
-      originalVerificar();
-      if (document.getElementById('conteudo').style.display === 'block') {
-        document.getElementById('extras').style.display = 'block';
-      }
-    }
-    function soltarCoracoes() {
-      const container = document.getElementById("hearts");
-      for (let i = 0; i < 30; i++) {
-        const heart = document.createElement("div");
-        heart.classList.add("heart");
-        heart.style.left = Math.random() * 100 + "vw";
-        heart.style.animationDuration = 3 + Math.random() * 3 + "s";
-        heart.innerHTML = "❤";
-        container.appendChild(heart);
-        setTimeout(() => heart.remove(), 6000);
-      }
-    }
-  </script>
+  }
+
+  document.getElementById("quiz").style.display="none";
+  document.getElementById("counter").style.display="block";
+  document.getElementById("mazeCanvas").style.display="block";
+  startCounter();
+}
+
+function startCounter(){
+  const start = new Date("2024-10-09");
+  setInterval(()=>{
+    let now = new Date();
+    let diff = now - start;
+
+    let days = Math.floor(diff / 86400000);
+    let weeks = Math.floor(days / 7);
+    let months = Math.floor(days / 30.4);
+    let hours = Math.floor(diff / 3600000);
+
+    document.getElementById("time").innerText = `${months} meses • ${weeks} semanas • ${days} dias • ${hours} horas`;
+  },1000);
+}
+</script>
 </body>
 </html>
